Latest version of sample dispatcher for Registrations which will work with Kamailio 5.2+

--- a/kamailio.cfg
+++ b/kamailio.cfg
@@ -5,24 +5,33 @@
 # - no TPC listening
 # - don't dispatch REGISTER and presence requests
 #
-# Kamailio (OpenSER) SIP Server v3.2
+# Kamailio SIP Server
 #     - web: http://www.kamailio.org
-#     - git: http://sip-router.org
+#     - git: http://github.com/kamailio/
 #
-# Direct your questions about this file to: sr-users@lists.sip-router.org
+# Direct your questions about this file to: sr-users@lists.kamailio.org
 #
 # Refer to the Core CookBook at http://www.kamailio.org/dokuwiki/doku.php
 # for an explanation of possible statements, functions and parameters.
 #
 # Several features can be enabled using '#!define WITH_FEATURE' directives:
 #
-# *** To run in debug mode: 
+# *** To run in debug mode:
 #     - define WITH_DEBUG
 #
 
-#!ifndef DBURL
-#!define DBURL "mysql://kamailio:kamailiorw@localhost/kamailio"
-#!endif
+#-!ifndef DBURL
+#-!define DBURL "mysql://kamailio:kamailiorw@localhost/kamailio"
+#-!endif
+
+# - flags
+#   FLT_ - per transaction (message) flags
+#	FLB_ - per branch flags
+#!define FLT_ACC 1
+#!define FLT_ACCMISSED 2
+#!define FLT_ACCFAILED 3
+
+#!define FLT_FS 10
 
 ####### Global Parameters #########
 
@@ -33,9 +42,6 @@ log_stderror=yes
 debug=2
 log_stderror=no
 #!endif
-
-#!define FLT_FS 10
-
 
 memdbg=5
 memlog=5
@@ -57,7 +63,7 @@ auto_aliases=no
 
 port=5060
 
-/* uncomment and configure the following line if you want Kamailio to 
+/* uncomment and configure the following line if you want Kamailio to
    bind on a specific interface/port/proto (default bind on all available) */
 # listen=udp:127.0.0.1:5060
 
@@ -65,12 +71,13 @@ sip_warning=no
 
 ####### Modules Section ########
 
-#set module path
-mpath="/usr/local/lib64/kamailio/modules/"
+# set module path
+#mpath="/usr/local/lib/kamailio/modules/"
 
-loadmodule "db_mysql.so"
-loadmodule "mi_fifo.so"
+#loadmodule "db_mysql.so"
+loadmodule "jsonrpcs.so"
 loadmodule "kex.so"
+loadmodule "corex.so"
 loadmodule "tm.so"
 loadmodule "tmx.so"
 loadmodule "sl.so"
@@ -82,16 +89,16 @@ loadmodule "siputils.so"
 loadmodule "xlog.so"
 loadmodule "sanity.so"
 loadmodule "ctl.so"
-loadmodule "mi_rpc.so"
 loadmodule "acc.so"
-loadmodule "path.so"
 loadmodule "dispatcher.so"
+loadmodule "path.so"
 
 # ----------------- setting module-specific parameters ---------------
 
 
-# ----- mi_fifo params -----
-modparam("mi_fifo", "fifo_name", "/var/run/kamailio/kamailio_fifo")
+# ----- jsonrpcs params -----
+modparam("jsonrpcs", "pretty_format", 1)
+
 
 # ----- rr params -----
 # add value to ;lr param to cope with most of the UAs
@@ -101,22 +108,27 @@ modparam("rr", "append_fromtag", 0)
 
 
 # ----- acc params -----
-modparam("acc", "log_flag", 1)
-modparam("acc", "failed_transaction_flag", 3)
-modparam("acc", "log_extra", 
-	"src_user=$fU;src_domain=$fd;dst_ouser=$tU;dst_user=$rU;dst_domain=$rd;src_ip=$si")
+modparam("acc", "log_flag", FLT_ACC)
+modparam("acc", "failed_transaction_flag", FLT_ACCFAILED)
+modparam("acc", "log_extra", "src_user=$fU;src_domain=$fd;dst_ouser=$tU;dst_user=$rU;dst_domain=$rd;src_ip=$si")
 
 # ----- tm params -----
 modparam("tm", "fr_timer", 2000)
 modparam("tm", "fr_inv_timer", 40000)
 
 # ----- dispatcher params -----
-modparam("dispatcher", "db_url", DBURL)
-modparam("dispatcher", "table_name", "dispatcher")
+#modparam("dispatcher", "db_url", DBURL)
+#modparam("dispatcher", "table_name", "dispatcher")
+modparam("dispatcher", "list_file", "/usr/local/etc/kamailio/dispatcher.list")
 modparam("dispatcher", "flags", 2)
-modparam("dispatcher", "dst_avp", "$avp(AVP_DST)")
-modparam("dispatcher", "grp_avp", "$avp(AVP_GRP)")
-modparam("dispatcher", "cnt_avp", "$avp(AVP_CNT)")
+modparam("dispatcher", "xavp_dst", "_dsdst_")
+modparam("dispatcher", "xavp_ctx", "_dsctx_")
+modparam("dispatcher", "ds_ping_from", "sip:proxy@mykamailio")
+modparam("dispatcher", "ds_ping_interval", 5)
+modparam("dispatcher", "ds_probing_threshold", 5)
+modparam("dispatcher", "ds_inactive_threshold", 5)
+modparam("dispatcher", "ds_ping_reply_codes", "class=2;code=403;code=488;class=3")
+modparam("dispatcher", "ds_probing_mode", 1)
 
 modparam("path", "use_received", 1)
 
@@ -125,48 +137,52 @@ modparam("path", "use_received", 1)
 
 # main request routing logic
 
-route {
+request_route {
 
 	# per request initial checks
 	route(REQINIT);
 
-	if(ds_is_from_list())
-	{
-	setflag(FLT_FS);
- 	}
+        if(ds_is_from_list()) {
+	        setflag(FLT_FS);
+        }
+
+	# CANCEL processing
+	if (is_method("CANCEL")) {
+		if (t_check_trans()) {
+			route(RELAY);
+		}
+		exit;
+	}
+
+	# handle retransmissions
+	if (!is_method("ACK")) {
+		if(t_precheck_trans()) {
+			t_check_trans();
+			exit;
+		}
+		t_check_trans();
+	}
 
 	# handle requests within SIP dialogs
 	route(WITHINDLG);
 
-	### only initial requests (no To tag)
-
-	# CANCEL processing
-	if (is_method("CANCEL"))
-	{
-		if (t_check_trans())
-			t_relay();
-		exit;
-	}
-
-	t_check_trans();
-
-
-	if (isflagset(FLT_FS)) {
+        if (isflagset(FLT_FS)) {
                 route(FROM_FS);
                 exit;
         }
 
+	### only initial requests (no To tag)
 
 	# record routing for dialog forming requests (in case they are routed)
 	# - remove preloaded route headers
 	remove_hf("Route");
-	if (is_method("INVITE|SUBSCRIBE"))
+	if (is_method("INVITE|SUBSCRIBE")) {
 		record_route();
+	}
 
 	# account only INVITEs
-	if (is_method("INVITE"))
-	{
-		setflag(1); # do accounting
+	if (is_method("INVITE")) {
+		setflag(FLT_ACC); # do accounting
 	}
 
 	# handle presence related requests
@@ -175,8 +191,7 @@ route {
 	# handle registrations
 	route(REGISTRAR);
 
-	if ($rU==$null)
-	{
+	if ($rU==$null) {
 		# request with no Username in RURI
 		sl_send_reply("484","Address Incomplete");
 		exit;
@@ -186,15 +201,12 @@ route {
 	route(DISPATCH);
 }
 
-
 route[FROM_FS]
 {
         record_route();
         route(RELAY);
         exit;
 }
-
-
 
 route[RELAY] {
 	if (!t_relay()) {
@@ -210,8 +222,7 @@ route[REQINIT] {
 		exit;
 	}
 
-	if(!sanity_check("1511", "7"))
-	{
+	if(!sanity_check("1511", "7")) {
 		xlog("Malformed SIP message from $si:$sp\n");
 		exit;
 	}
@@ -224,8 +235,8 @@ route[WITHINDLG] {
 		# take the path determined by record-routing
 		if (loose_route()) {
 			if (is_method("BYE")) {
-				setflag(1); # do accounting ...
-				setflag(3); # ... even if the transaction fails
+				setflag(FLT_ACC); # do accounting ...
+				setflag(FLT_ACCFAILED); # ... even if the transaction fails
 			}
 			route(RELAY);
 		} else {
@@ -271,28 +282,26 @@ route[PRESENCE] {
 # Dispatch requests
 route[DISPATCH] {
 	# round robin dispatching on gateways group '1'
-	if(!ds_select_dst("1", "4"))
-	{
+	if(!ds_select_dst("1", "4")) {
 		send_reply("404", "No destination");
 		exit;
 	}
-	xlog("L_DBG", "--- SCRIPT: going to <$ru> via <$du>\n");
+	xdbg("--- SCRIPT: going to <$ru> via <$du> (attrs: $xavp(_dsdst_=>attrs))\n");
 	t_on_failure("RTF_DISPATCH");
 	route(RELAY);
 	exit;
 }
 
-# Sample failure route
+# Try next destionations in failure route
 failure_route[RTF_DISPATCH] {
 	if (t_is_canceled()) {
 		exit;
 	}
 	# next DST - only for 500 or local timeout
 	if (t_check_status("500")
-			or (t_branch_timeout() and !t_branch_replied()))
-	{
-		if(ds_next_dst())
-		{
+			or (t_branch_timeout() and !t_branch_replied())) {
+		if(ds_next_dst()) {
+			xdbg("--- SCRIPT: retrying to <$ru> via <$du> (attrs: $xavp(_dsdst_=>attrs))\n");
 			t_on_failure("RTF_DISPATCH");
 			route(RELAY);
 			exit;
